--- a/foundry.toml
+++ b/foundry.toml
@@ -2,9 +2,4 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-solc = "0.8.24"
-optimizer = true
-optimizer_runs = 200
-
-[rpc_endpoints]
-local = "http://localhost:8545" 
+fs_permissions = [{ access = "read", path = "./.env" }]
